--- a/homepage.css
+++ b/homepage.css
@@ -1,9 +1,62 @@
-.jumbotron {
-    text-align: center;
-    color: #FFA270;
-    background-color: #158CBB;
-  }
-.lead {
-    color: #092935;
+/* html{
+  scroll-snap-type: y mandatory;
+} */
+/* .section{
+  block-size: 90vh;
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+  display: grid;
+  place-items: center;
+} */
+body {
+  font: 20px Montserrat, sans-serif;
+  line-height: 1.8;
+  line-height: 4;
+  color: #f5f6f7;
+}
+p {font-size: 16px;}
+.margin {
+  margin-bottom: 45px;
+}
+.bg-1 {
+  background-color: #DAD4F7; /* soft purple */
+  color: #ffffff;
+}
+.bg-2 {
+  background-color: #474e5d; /* Dark Blue */
+  color: #ffffff;
+}
+.bg-3 {
+  background-color: #ffffff; /* White */
+  color: #555555;
+}
+.bg-4 {
+  background-color: #2f2f2f; /* Black Gray */
+  color: #fff;
+}
+.container-fluid {
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
 
+.center{
+  margin-left: auto;
+  margin-right:auto;
+}
+
+.navbar {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 0;
+  border-radius: 0;
+  margin-bottom: 0;
+  font-size: 12px;
+  letter-spacing: 5px;
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+  display: grid;
+  place-items: center;
+}
+.navbar-nav  li a:hover {
+  color: #1abc9c !important;
 }
